Reflow phis when demoting to double specialization (bug 747271, r=pierron).